# survive-soft-reboot

./: .gitignore  README.md  mkosi.build  mkosi.conf
btrfs-root-subvolume/: sec-counter-btrfs-root-subvolume-generator  sec-counter.service
btrfs-snapshot/: sec-counter-btrfs-snapshot-generator  sec-counter-snapshot.spec  sec-counter@.service  system-sec\x2dcounter.slice
btrfs-soft-reboot-generator/: Makefile  btrfs-soft-reboot-generator.c  btrfs-soft-reboot-generator.spec  meson.build
btrfs-soft-reboot-generator/examples/: hello-world.conf  hello-world.container  named.conf  nginx.conf  rsyncd.conf  sec-counter-web.conf  sec-counter.conf
btrfs-soft-reboot-generator/scripts/: set_service_attrs.sh
btrfs-soft-reboot-generator/src/: btrfs-soft-reboot-generator.c
image/: sec-counter.service
portable-image/: sec-counter.service
sec-counter/: meson.build  sec-counter.spec
sec-counter-web/: Dockerfile  Makefile  build-container.sh  go.mod
sec-counter-web/cmd/: main.go
sec-counter-web/units/: sec-counter-web.service
sec-counter-web/webpage/: index.template
sec-counter/units/: meson.build  sec-counter.service
src/: Makefile  sec-counter.c
